--- a/index.html
+++ b/index.html
@@ -11,31 +11,11 @@
 
     <body>
         <header>
-            <div class="d-flex bg-gradient">
-                <div class="d-flex flex-grow-1">
-                    <nav class="courseTitle">
-                        <button class="navbar-brand border-0">
-                            <img src="assets/img/logo.png" alt="logo" />
-                        </button>
-                    </nav>
-                    <div class="flex-grow-1">
-                        <div class="ReactTitle ps-3  d-flex align-items-center">
-                            <img src="assets/img/logo-javascript@2x.png" alt="logo" />
-                            <h3 class="mb-0">JS Apps</h3>
-                        </div>
-                        <div class="d-flex ps-3 align-items-center">
-                            <div class="flex-grow-1">
-                                <h4>Countdown Timer for Meditation</h4>
-                                <p class="pb-0 mb-3 text-start">
-                                    Purpose: Countdown timer for meditation with background sounds and climate settings.
-                                </p>
-                                <p class="pb-0 mt-0 text-start"><a href="https://github.com/ramareddy-brs/meditation" target="_blank" >Git Repository</a></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="pt-3">
+              <h4 class="text-center"> Meditation</h4>
+              <p class="pb-0 mt-0 text-center"><a href="https://github.com/ramareddy-brs/form-wizard" target="_blank" >Git Repository</a></p>
             </div>
-        </header>
+          </header>
 
         <main role="main" class="pt-0">
           <div class="app">
@@ -70,19 +50,25 @@
           </div>
       </main>
       
-        <footer class="footer footer-dark">
-            <div class="d-flex justify-content-between px-5">
-                <div>ALL RIGHTS RESERVED BRS STUDIO, INDIA</div>
-                <div>
-                    <button onclick="setTheme('#1A4B84')" class="theme-switch theme-switch-chathams_blue"></button>
-                    <button onclick="setTheme('#991E14')" class="theme-switch theme-switch-tamarillo"></button>
-                    <button onclick="setTheme('#FEAD06')" class="theme-switch theme-switch-yellow_sea"></button>
-                </div>
-                <div>
-                    <img src="assets/img/footer-logo.png" alt="logo" />
-                </div>
-            </div>
-        </footer>
+      <footer class="footer footer-dark">
+        <div class="d-flex justify-content-center px-5">
+          <div>
+            <button
+              onclick="setTheme('#1A4B84')"
+              class="theme-switch theme-switch-chathams_blue"
+            ></button>
+            <button
+              onclick="setTheme('#991E14')"
+              class="theme-switch theme-switch-tamarillo"
+            ></button>
+            <button
+              onclick="setTheme('#FEAD06')"
+              class="theme-switch theme-switch-yellow_sea"
+            ></button>
+          </div>
+        </div>
+      </footer>
+    
         <script src="assets/js/script.js"></script>
     </body>
 </html>
